--- a/DirtyGaine.html
+++ b/DirtyGaine.html
@@ -1,2 +1,4 @@
-Никита Панков
-Nikitanikita230707@gmail.com
+DirtyGaine:Musical performer, songwriter.
+
+Artist name:Nikita Pankov
+mail:Nikitanikita230707@gmail.com
